--- a/app/src/main/res/layout/fragment_course_1.xml
+++ b/app/src/main/res/layout/fragment_course_1.xml
@@ -8,105 +8,115 @@
     >
 
     <TextView
-        android:id="@+id/saveT"
+        android:id="@+id/saveTA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/score"
-        android:text="Save"
+        android:layout_below="@id/storeA"
+        android:layout_alignStart="@+id/storeA"
+        android:text=" Save "
         android:textColor="@color/colorBrow" />
 
     <TextView
-        android:id="@+id/clearT"
+        android:id="@+id/clearTA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/addT"
-        android:paddingLeft="15dp"
-        android:text="clear"
+        android:layout_below="@+id/clearA"
+        android:layout_alignStart="@+id/clearA"
+        android:text=" clear "
         android:textColor="@color/colorBrow" />
 
     <TextView
-        android:id="@+id/addT"
+        android:id="@+id/addTA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/SecondWeightPercentage"
-        android:text="add"
+        android:layout_below="@+id/addA"
+        android:layout_alignStart="@+id/addA"
+        android:text="  add"
         android:textColor="@color/colorBrow" />
 
     <TextView
-        android:id="@+id/removeT"
+        android:id="@+id/removeTA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/nameCourse"
+        android:layout_below="@+id/removeA"
+        android:layout_alignEnd="@+id/removeA"
         android:text="remove"
         android:textColor="@color/colorBrow" />
 
 
-    <LinearLayout
-        android:layout_width="266dp"
-        android:layout_height="77dp"
+    <!-- <LinearLayout
+        android:layout_width="358dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-9dp"
-        android:layout_toEndOf="@+id/weight"
-        android:orientation="horizontal">
+        android:layout_alignParentEnd="true"
+        android:orientation="horizontal">-->
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/removeA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/addA"
+        android:layout_marginRight="20dp"
+        android:layout_alignBottom="@+id/addA"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_remove"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:tint="@android:color/white"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_remove"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/clearA"
+        android:layout_marginRight="20dp"
+        android:layout_alignBottom="@+id/clearA"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_add_menu"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:tint="@android:color/white"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_add_menu"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/clearA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/storeA"
+        android:layout_marginRight="20dp"
+        android:layout_alignBottom="@+id/storeA"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_clear"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:tint="@android:color/white"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_clear"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/storeA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/MainMenuA"
+        android:layout_toLeftOf="@+id/MainMenuA"
+        android:layout_marginRight="20dp"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_save"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/store"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:tint="@android:color/white"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_save"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/MainMenuA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="24dp"
+        android:layout_toEndOf="@+id/score"
+        android:onClick="SaveCourse"
+        android:tint="@android:color/white"
+        app:fabSize="normal"
+        app:rippleColor="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_add"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/MainMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:onClick="SaveCourse"
-            android:tint="@android:color/white"
-            app:fabSize="normal"
-            app:rippleColor="@color/colorPrimaryDark"
-            app:srcCompat="@drawable/ic_add"
-            tools:ignore="VectorDrawableCompat" />
-
-    </LinearLayout>
 
 
 
@@ -117,14 +127,15 @@
         android:layout_alignTop="@+id/course"
         android:layout_centerHorizontal="true"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="13"
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Enter Course Name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:maxLength="13"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -206,7 +217,9 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
-        android:textColorHighlight="#7cff88" />
+        android:maxLength="17"
+        android:textColorHighlight="#7cff88"
+        />
 
     <EditText
         android:id="@+id/firstScore"
@@ -266,6 +279,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -312,6 +326,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -369,7 +384,8 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
-        android:textColorHighlight="#7cff88" />
+        android:textColorHighlight="#7cff88"
+        android:maxLength="17"/>
 
     <EditText
         android:id="@+id/fourthScore"
@@ -427,6 +443,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -482,6 +499,9 @@
         android:layout_alignParentStart="true"
         android:textColor="@color/colorBlack"
         android:layout_below="@+id/fifthWeightName"
+        android:lines="1"
+        android:maxLines="1"
+        android:maxLength="17"
         />
 
     <EditText
