--- a/app/src/main/res/layout/fragment_course_5.xml
+++ b/app/src/main/res/layout/fragment_course_5.xml
@@ -6,14 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-
     <TextView
         android:id="@+id/saveTE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/dash1E"
         android:layout_alignParentBottom="true"
-        android:text="Save"
+        android:layout_below="@id/storeE"
+        android:layout_alignStart="@+id/storeE"
+        android:text=" Save "
         android:textColor="@color/colorBrow" />
 
     <TextView
@@ -21,44 +21,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/saveTE"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:text="clear"
+        android:layout_below="@+id/clearE"
+        android:layout_alignStart="@+id/clearE"
+        android:text=" clear "
         android:textColor="@color/colorBrow" />
 
-    <TextView
-        android:id="@+id/addTE"
-        android:layout_width="wrap_content"
+     <TextView
+         android:id="@+id/addTE"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_below="@+id/addE"
+         android:layout_alignStart="@+id/addE"
+         android:text="  add"
+         android:textColor="@color/colorBrow" />
+
+     <TextView
+         android:id="@+id/removeTE"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         android:layout_below="@+id/removeE"
+         android:layout_alignEnd="@+id/removeE"
+         android:text="remove"
+         android:textColor="@color/colorBrow" />
+
+
+    <!-- <LinearLayout
+        android:layout_width="358dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/clearTE"
-        android:text="add"
-        android:textColor="@color/colorBrow" />
-
-    <TextView
-        android:id="@+id/removeTE"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/firstWeightPercentageE"
-        android:text="remove"
-        android:textColor="@color/colorBrow" />
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="77dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="12dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal">-->
 
-        <android.support.design.widget.FloatingActionButton
+       <android.support.design.widget.FloatingActionButton
             android:id="@+id/removeE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_toLeftOf="@+id/addE"
+            android:layout_marginRight="20dp"
+           android:layout_alignBottom="@+id/addE"
             android:tint="@android:color/white"
             app:fabSize="mini"
             app:srcCompat="@drawable/ic_remove"
@@ -68,7 +70,9 @@
             android:id="@+id/addE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_toLeftOf="@+id/clearE"
+            android:layout_marginRight="20dp"
+            android:layout_alignBottom="@+id/clearE"
             android:tint="@android:color/white"
             app:fabSize="mini"
             app:srcCompat="@drawable/ic_add_menu"
@@ -78,35 +82,41 @@
             android:id="@+id/clearE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_toLeftOf="@+id/storeE"
+            android:layout_marginRight="20dp"
+            android:layout_alignBottom="@+id/storeE"
             android:tint="@android:color/white"
             app:fabSize="mini"
             app:srcCompat="@drawable/ic_clear"
             tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/storeE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:tint="@android:color/white"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_save"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/storeE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/MainMenuE"
+        android:layout_toLeftOf="@+id/MainMenuE"
+        android:layout_marginRight="20dp"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_save"
+        tools:ignore="VectorDrawableCompat" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/MainMenuE"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:onClick="SaveCourse"
-            android:tint="@android:color/white"
-            app:fabSize="normal"
-            app:rippleColor="@color/colorPrimaryDark"
-            app:srcCompat="@drawable/ic_add"
-            tools:ignore="VectorDrawableCompat" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/MainMenuE"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="24dp"
+        android:layout_toEndOf="@+id/scoreE"
+        android:onClick="SaveCourse"
+        android:tint="@android:color/white"
+        app:fabSize="normal"
+        app:rippleColor="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_add"
+        tools:ignore="VectorDrawableCompat" />
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 
@@ -124,7 +134,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Enter Course Name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:maxLength="13"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -205,6 +216,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -265,6 +277,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -310,6 +323,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -367,6 +381,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -425,6 +440,7 @@
         android:textColor="@color/colorBlack"
         android:lines="1"
         android:maxLines="1"
+        android:maxLength="17"
         android:textColorHighlight="#7cff88" />
 
     <EditText
@@ -480,6 +496,9 @@
         android:layout_alignParentStart="true"
         android:textColor="@color/colorBlack"
         android:layout_below="@+id/fifthWeightNameE"
+        android:lines="1"
+        android:maxLines="1"
+        android:maxLength="17"
         />
 
     <EditText
